--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,7 @@
 body{
     margin: 0px;
     padding: 0px;
+    box-sizing: content-box;
 }
 
 header{
@@ -30,6 +31,15 @@ header{
     padding: 8px;
     margin: 5px;
     background-color: rgb(255, 42, 42);
+    color: rgb(255, 255, 255);
+    border:none;
+    border-radius: 3px;
+}
+
+.voltar{
+    padding: 8px;
+    margin: 5px;
+    background-color: #A67CEB;
     color: rgb(255, 255, 255);
     border:none;
     border-radius: 3px;
@@ -263,13 +273,17 @@ td{
     display: flex;
     flex-direction: column;
     width: 50%;
+}
 
+.triagem{
+    
 }
 
 .a{
     width: 100%;
     box-shadow: 1px 3px 10px #746F7D;
-    padding: 10px;
+    padding-left: 10px;
+    box-sizing: border-box;
 }
 
 .dados{
@@ -285,6 +299,20 @@ td{
 }
 
 .reabrir{
+    margin-top: 10px;
+    padding: 10px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: #70E689;
+    color: #ffffff;
+    border-radius: 10px;
+    border: none;
+    margin-right: none;
+}
+
+.confirmar{
     margin-top: 10px;
     padding: 10px;
     width: 100%;
