--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,14 +275,25 @@ td{
     width: 50%;
 }
 
-.triagem{
-    
+#triagem{
+    margin-top: 10px;
+    padding: 10px;
+    width: auto;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    background-color: #A67CEB;
+    color: #ffffff;
+    border-radius: 10px;
+    border: none;
+    margin-right: none;
 }
 
 .a{
     width: 100%;
     box-shadow: 1px 3px 10px #746F7D;
     padding-left: 10px;
+    padding-bottom: 20px;
     box-sizing: border-box;
 }
 
